# mise

./: .dockerignore  .gcloudignore  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: Dockerfile.candidate  Dockerfile.gateway  Dockerfile.ranking  cloudbuild-candidate.yaml  cloudbuild-gateway.yaml  cloudbuild-ranking.yaml  deploy.sh  requirements-candidate.txt  requirements-gateway.txt  requirements-ranking.txt
feature_repo/: definitions.py  feature_store.yaml
scripts/: load_test.py
src/mise/: api.py  build_index.py  config.py  data_gen.py  dataset.py  evaluate.py  feature_store_demo.py  job_queue.py  metrics.py  model.py  popularity_gen.py  rank_features.py  rank_train.py  rerank.py  retrieve.py  train.py  worker.py
src/services/: candidate_service.py  gateway.py  ranking_service.py
tests/: test_job_queue.py  test_pipeline.py  test_ranking.py  test_services.py
